Bug fixed: More links not appearing on mobile Safari

--- a/assets/css/scss/index.scss
+++ b/assets/css/scss/index.scss
@@ -466,20 +466,19 @@ body {
 }
 .more-notes .mn-header {
     transform: rotate(270deg);
-    padding-top: 20px;
-    line-height: 1.25rem;
+    // margin-top: 10px;
+    // line-height: 1.25rem;
 }
 .more-notes .mn-links {
     width: 100%;
     max-width: 600px;
     text-align: left;
-    padding: 5px;
     text-align: center;
-    display:flex;
+    display: flex;
+    align-items: center;
 }
 .more-notes .mn-links li {
     display: inline;
-    margin-right: 10px;
     text-align: center;
 }
 .more-notes .mn-links li a {
